Fixed text-overflow, and padding on mobile.

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -59,10 +59,10 @@
 
 @media screen and (max-width: 637px) {
   .cards {
-    padding: 40px 20px 0;
+    padding: 36px 20px 0;
   }
 
   .cards__list {
-    padding: 15px 0 18px;
+    padding: 0;
   }
 }
